Ready to merge ✅

--- a/index.html
+++ b/index.html
@@ -29,13 +29,14 @@
                 <h1>Hi, It's <span>Harshal</span></h1>
                 <h3 class="text-animation">I'm a Undergrad Student in VIT Mumbai<span></span></h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente earum tempora animi est? Facere delectus obcaecati temporibus et quibusdam sequi nisi, tempora tempore cum ad, laboriosam culpa officiis, necessitatibus doloremque?
+                    I am a student undergrad currently in my freshman year, passionate about coding and problem solving, I’m actively seeking opportunities to broaden my knowledge in Software Development and make tangible impact on real-world projects. Excited about the journey ahead!
+
                 </p>
                 <div class="social-icons">
-                    <a href="#"><box-icon name='linkedin' type='logo' ></box-icon></a>
-                    <a href="#"><box-icon name='github' type='logo' ></box-icon></a>
-                    <a href="#"><box-icon name='twitter' type='logo' ></box-icon></a>
-                    <a href="#"><box-icon name='instagram-alt' type='logo' ></box-icon></a>
+                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="#"><i class='bx bxl-github' ></i></a>
+                    <a href="#"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
                 </div>
                 <div class="btn-group">
                     <a href="#" class="btn">Hire</a>
