Ready to merge ✅

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="home" id="home">
             <div class="home-content">
                 <h1>Hi, It's <span>Harshal</span></h1>
-                <h3 class="text-animation">I'm a Undergrad Student in VIT Mumbai<span></span></h3>
+                <h3 class="text-animation">I'm a Web Developer<span></span></h3>
                 <p>
                     I am a student undergrad currently in my freshman year, passionate about coding and problem solving, I’m actively seeking opportunities to broaden my knowledge in Software Development and make tangible impact on real-world projects. Excited about the journey ahead!
 
