--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
                 </p>
                 <div class="social-icons">
-                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#"><i class='bx bxl-github' ></i></a>
-                    <a href="#"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                    <a href="https://www.linkedin.com/in/harshalmore31/"><i class='bx bxl-linkedin' ></i></a>
+                    <a href="https://github.com/harshalmore31"><i class='bx bxl-github' ></i></a>
+                    <a href="https://x.com/Harshalmore31"><i class='bx bxl-twitter' ></i></a>
+                    <a href="harshalmore2468@gmail.com"><i class='bx bxl-gmail' ></i></a>
                 </div>
                 <div class="btn-group">
                     <a href="#" class="btn">Hire</a>
