refactor: Add navigation bar and update layout in index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Portfolio</title>
-    
+    <link rel="stylesheet" href="style.css">
+    <nav class="nvbr">
+
+    </nav>
 </head>
 <body>
-    
+    <div class="main">
+        <div class="navbar">
+            <div class="social-icons">
+                <img src="ion--home.svg" alt="Home-icon" class="svg">
+                <label>Home</label>
+            </div>
+        </div>
+    <div class="display">
+            Bye
+    </div>
+    </div>
 </body>
 </html>
